force-app/main/default/objects/copado__Compliance_Rule__c/fields/copado__Active__c.field-meta.xml
<CustomField>
    <fullName>copado__Active__c</fullName>
    <defaultValue>true</defaultValue>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>