force-app/main/default/objects/copado__Compliance_Rule__c/fields/copado__Filter_Criteria__c.field-meta.xml
<CustomField>
    <fullName>copado__Filter_Criteria__c</fullName>
    <inlineHelpText>Criteria filter query</inlineHelpText>
    <label>Filter Criteria</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>