force-app/main/default/objects/copado__Compliance_Rule__c/fields/copado__Is_Valid__c.field-meta.xml
<CustomField>
    <fullName>copado__Is_Valid__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Automatically updated by copado when saving managing criteria</inlineHelpText>
    <label>Is Valid</label>
    <type>Checkbox</type>
</CustomField>