force-app/main/default/objects/copado__Compliance_Rule__c/fields/copado__Last_Validation_Date_time__c.field-meta.xml
<CustomField>
    <fullName>copado__Last_Validation_Date_time__c</fullName>
    <label>Last Validation Date/time</label>
    <type>DateTime</type>
</CustomField>