force-app/main/default/objects/copado__Compliance_Rule__c/fields/copado__Matching_Criteria__c.field-meta.xml
<CustomField>
    <fullName>copado__Matching_Criteria__c</fullName>
    <inlineHelpText>Operator between Record Count Criteria and Record Count</inlineHelpText>
    <label>Matching Criteria</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Equals</fullName>
            </value>
            <value>
                <fullName>Not Equals</fullName>
            </value>
            <value>
                <fullName>Less Than</fullName>
            </value>
            <value>
                <fullName>Less or Equal</fullName>
            </value>
            <value>
                <fullName>Greater Than</fullName>
            </value>
            <value>
                <fullName>Greater or Equal</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>