force-app/main/default/objects/copado__Compliance_Rule__c/fields/copado__Risk_Details__c.field-meta.xml
<CustomField>
    <fullName>copado__Risk_Details__c</fullName>
    <label>Risk Details</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>